# pwman3

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  CHANGELOG  ChangeLog  Credits  Dockerfile  MAINTAINERS.md  MANIFEST.in  Makefile  PKG-INFO  Pipfile  README  README.md  Vagrantfile  appveyor.yml  build_manpage.py  docker-compose.yml  index.html  params.json  provision_vagrant.sh  pyproject.toml  release.mk  requirements-integration.txt  requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/workflows/: test-all.yml  test.yml
debian/: README.source  changelog  control  copyright  files  manpages  pwman3.1  rules  watch
docs/: Makefile  general_notes.txt
docs/source/: conf.py  configuration.rst  index.rst  install.rst  modules.rst  packaging.rst  pwman.data.drivers.rst  pwman.data.rst  pwman.exchange.rst  pwman.rst  pwman.ui.rst  pwman.util.rst  tutorial.rst
documentation/: general_notes.txt
documentation/man_page/: pwman3.1
pwman/: __init__.py
pwman/data/: __init__.py  convertdb.py  database.py  factory.py  migration.py  nodes.py  tags.py
pwman/exchange/: exporter.py  (+1 more)
scripts/: base.tpl  daemon.py  pwman3  pwman3_old  webui.py
tests/: config_mysql.sh  crypto_tests.py  db_tests.py  init_mongo.js  pwman-newdb.db  pwman.db.no.encryption  pwman.v0.0.8.db  test_base_ui.py  test_complete_ui.py  test_config.py  test_converter.py  test_crypto_engine.py  test_factory.py  test_importer.py  test_init.py  test_integration.py  test_mongodb.py  test_mysql.py  test_nodes.py  test_postgresql.py  test_pwman.py  test_sqlite.py  test_tools.py
(+58 files in other folders)
