[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
name = "pwman3"
dynamic = ["version"]
description = "a command line password manager with support for multiple databases."
authors = [{name = "Oz N Tiram", email = "oz.tiram@gmail.com"}]
license = {text = "GNU GPL"}
readme = "README.md"
keywords = ["password-manager", "crypto", "cli"]


classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "cryptography",
    "colorama",
    "pyreadline;platform_system=='Windows'",
]

[project.urls]
homepage = "http://pwman3.github.io/pwman3/"
documentation = "https://pwman3.readthedocs.io/en/latest/"

[project.scripts]
pwman3 = "pwman.ui.cli:main"

[tool.setuptools_scm]
write_to = "pwman/_version.py"
